<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hex Style</string>
    <string name="output">Output</string>
    <string name="action_settings">Settings</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="string_foreground">Foreground</string>
    <string name="string_background">Background</string>
    <string name="zeroPct">0%</string>
    <string name="default_hex">#000000</string>
    <string name="action_change_text">Change output text</string>
    <string name="action_change_font">Change output font</string>
    <string name="fontname_sans_serif">Sans-serif</string>
    <string name="fontname_monospace">Monospace</string>
    <string name="fontname_serif">Serif</string>
    <string name="fontname_bold">Bold</string>
    <string name="fontname_italic">Italic</string>
    <string name="fontname_bold_italic">Bold-Italic</string>
    <string name="fontname_normal">Normal</string>
    
</resources>
